--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.20",
   "description": "suning front-end tools",
   "main": "index.js",
+  "bin": {
+    "sfe": "./bin/sfe.js"
+  },
   "scripts": {
     "test": "sft"
   },
@@ -20,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/moxiaohe/sft/issues"
   },
-  "homepage": "https://github.com/moxiaohe/sft"
+  "homepage": "https://github.com/moxiaohe/sft",
+  "dependencies": {
+      "commander": "~2.2.0",
+  }
 }
