--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "homepage": "https://github.com/moxiaohe/sft",
   "dependencies": {
-      "commander": "~2.2.0"
+      "inquirer": "~0.4.1",
+      "ncp": "~0.5.0",
+      "commander": "~2.2.0",
+      "rimraf": "~2.2.6"
   }
 }
